Creación de página de inicio, ingreso de datos de libro

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <% include partials/header %>
     <title>Hola Mundo</title>
-    <link rel="stylesheet" href="../public/css/bootstrap.css">
-    
-
 </head>
 <body>
-    <h1>Hola a Todos xD</h1>
+    <h1>Hola a Todos !! xD</h1>
+    <div class="container">
+        <div class="row">
+            <div class="card">
+                <div class="card-body">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nobis mollitia, quisquam quis provident ut iure error, eaque cumque quidem quae dolores natus doloremque soluta praesentium dolor aliquam dolore reprehenderit.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    
 </body>
 </html>
